# aida

./: .gitignore  Cargo.toml
adaxml/: Cargo.toml
adaxml/src/: io.rs  iter.rs  lib.rs  tag.rs
adaxml/test/: longduongs_tied.musicxml  template.musicxml
m32/: Cargo.toml
m32/src/: attribs.rs  color.rs  config.rs  duration.rs  gnote.rs  interval.rs  lib.rs  lyric.rs  measure.rs  part.rs  pitch.rs  score.rs  simple_note.rs  tuplet.rs  xml_import.rs
m32/test/: longduongs_voice.musicxml  longduongs_voice.mxl  outtemplate.xml
m32/test/melBank/: AIDA.sqlite  myself.musicxml
m32/test/melBank/beethoven/symp/: no5.musicxml
m32/test/melBank/longduong/: longduongs.mxl  longduongs_tied.musicxml
m32/test/melBank/mozart/sonata/: no1.musicxml
m32/test/melBank/mozart/symps/: no1.musicxml
src/: main.rs
