[package]
name = "m32"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fraction = "0.9.0"
anyhow = "1.0.44"
lazy_static = "1.4.0"
smallvec = "1.7.0"
bitflags = "1.3"
# intrusive-collections = "0.9"
sha2 = "0.9.8"
zip = "0.5"

adaxml = {path='../adaxml'}